(fix) Remove unecessary z-index

--- a/public/app.css
+++ b/public/app.css
@@ -66,7 +66,6 @@ button{ background: #E45743; border: 1px solid #E45743; padding: 0.8em 2.8em; ma
   border: solid 3px #FFF;
   width: 110px;
   height: 110px;
-  z-index: 100;
 }
 
 .two img{
